[gd_scene load_steps=12 format=2]

[ext_resource path="res://Fonts/Montserrat/Montserrat-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/WinPopup.gd" type="Script" id=2]
[ext_resource path="res://Fonts/ARIALN.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/Open_Sans/OpenSans-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.694118, 0.929412, 0.909804, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=2]
size = 45
outline_color = Color( 0.631373, 0.415686, 0.909804, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.47451, 0.278431, 0.521569, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.631373, 0.415686, 0.909804, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 30
outline_color = Color( 0.631373, 0.415686, 0.909804, 1 )
font_data = ExtResource( 4 )

[node name="WinPopup" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="PopupDialog" type="PopupDialog" parent="."]
visible = true
margin_left = 48.0
margin_top = 128.0
margin_right = 428.0
margin_bottom = 465.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CongratsLabel" type="Label" parent="PopupDialog"]
margin_left = 66.0685
margin_top = 44.2749
margin_right = 328.068
margin_bottom = 161.275
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.631373, 0.415686, 0.909804, 1 )
text = "CONGRATS!
YOU WIN!!!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="PopupDialog"]
margin_left = 119.626
margin_top = 245.95
margin_right = 260.626
margin_bottom = 301.95
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "HOME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="PopupDialog"]
margin_left = 206.932
margin_top = 169.841
margin_right = 339.932
margin_bottom = 228.841
custom_fonts/font = SubResource( 6 )
text = "Score"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PopupDialog"]
margin_left = 89.0
margin_top = 173.0
margin_right = 197.0
margin_bottom = 224.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.631373, 0.415686, 0.909804, 1 )
text = " Score: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="about_to_show" from="PopupDialog" to="." method="_on_PopupDialog_about_to_show"]
[connection signal="pressed" from="PopupDialog/Button" to="." method="_on_Button_pressed"]
